# test-wasm-runtime

./: Brewfile  Cargo.toml  README.md
rustpython_wasm/: Cargo.toml
wasm/: test.wat
