[package]
name = "rustpython-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = "0.3"
rustpython-vm = { git = "https://github.com/RustPython/RustPython", rev = "7c4c1eabf04fe3a26bb4dee4fa1ed8214b8bae7b", default-features = false, features = ["compiler"] }
